@@ -12,19 +12,10 @@
 #include "autorun.h"
 #include "ActionManager.h"
 #include "utils/LCDFactory.h"
-#include "cores/ModPlayer.h"
-#include "cores/mplayer/ASyncDirectSound.h"
-#include "GUIButtonControl.h"
-#include "GUISpinControl.h"
-#include "GUIListControl.h"
-#include "GUIThumbnailPanel.h"
-#include "utils/DownloadQueueManager.h"
 #include "utils/KaiClient.h"
 #include "utils/MemUnit.h"
-#include "FileSystem/DAAPDirectory.h"
 #include "utils/FanController.h"
 #include "XBVideoConfig.h"
-#include "GUIStandardWindow.h"
 #include "utils/LED.h"
 #include "LangCodeExpander.h"
 #include "lib/libGoAhead/xbmchttp.h"
@@ -43,7 +34,6 @@
 #include "sectionloader.h"
 #include "utils/charsetconverter.h"
 #include "guiusermessages.h"
-#include "cores/paplayer/paplayer.h"
 #include "filesystem/directoryCache.h"
 #include "cores/DllLoader/DllLoaderContainer.h"
 #include "filesystem/filedaap.h"
@@ -51,8 +41,10 @@
 #include "PartyModeManager.h"
 #include "FileSystem/DllLibCurl.h"
 #include "audiocontext.h"
+#include "GUIFontTTF.h"
 
 // Windows includes
+#include "GUIStandardWindow.h"
 #include "GUIWindowMusicPlaylist.h"
 #include "GUIWindowMusicSongs.h"
 //#include "GUIWindowMusicTop100.h"
